# ansible-lint

./: .ansible-lint  .ansible-lint-ignore  .ansible-lint.yml  .coveragerc  .darglint  .drone.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .packit.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  .pylintrc  .readthedocs.yml  .taplo.toml  .travis.yml  .vault_pass  .yamllint  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Containerfile  Dockerfile  GITHUB_ACTION_LOCK_ISSUE.md  ISSUE_TEMPLATE.md  LICENSE  PKGBUILD  README.md  README.rst  ROADMAP.md  ROADMAP.rst  RULE_DOCS.md  RULE_DOCS.rst  Vagrantfile  a.ansi  a.yml  action.yml  (+38 more)
.azure-pipelines/: tox.yml
.config/: ansible-lint.spec  constraints.txt  dictionary.txt  docs-requirements.txt  lock-requirements.txt  requirements-docs.in  requirements-docs.txt  requirements-lock.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  runtime-requirements.txt  test-requirements.txt  vulture_whitelist.py
.github/: CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SECURITY.md  SECURITY.rst  dependabot.yml  lower-constraints.txt  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_report.md  feature_request.md
.github/action/: Dockerfile  entrypoint.sh  readme.md
.github/workflows/: README.rst  ack.yml  arch_packaging.yml  codeql.yml  labels.yml  pkg-arch.yml  push.yml  redirects.yml  release.yml  security-check.yml  test.yml  tox-linters.yml  tox-linters.yml.disabled  tox-tests.yml  tox.yml
.sonarlint/: connectedMode.json
devel395/: pyvenv.cfg
docker/: Dockerfile
docs/: CONTRIBUTING.md  README.md  _autofix_rules.md  autofix.md  conf.py  configuring.md  configuring.rst  contributing.md  contributing.rst  custom-rules.md  custom-rules.rst  default_rules.md  default_rules.rst  index.md  index.rst  installing.md  installing.rst  installing_dnf.md  installing_pip.md  installing_source.md  internals.md  philosophy.md  profiles.md  redirects.yml  requirements.in  requirements.txt  rules.md  rules.rst  rules_table_generator_ext.py  usage.md  usage.rst  using-profiles.md
docs/_static/: default.css  pygments.css  theme_overrides.css
docs/docsite/: .gitignore  Makefile  Makefile.sphinx  README.md  modules.js
docs/licenses/: LICENSE.mit.txt
docs/rst/: conf.py  index.rst
docs/rules/: .gitignore  args.md  avoid-implicit.md  command-instead-of-module.md  command-instead-of-shell.md  complexity.md  deprecated-bare-vars.md  deprecated-command-syntax.md  deprecated-local-action.md  deprecated-module.md  empty-string-compare.md  fqcn.md  galaxy-version-incorrect.md  galaxy.md  ignore-errors.md  index.md  inline-env-var.md  internal-error.md  jinja-template-extension.md  jinja.md  jinja2-template-extension.md  key-order.md  latest.md  literal-compare.md  load-failure.md  loop-var-prefix.md  meta-incorrect.md  meta-no-info.md  meta-no-tags.md  meta-runtime.md  meta-unsupported-ansible.md  meta-video-links.md  name.md  no-changed-when.md  no-free-form.md  no-handler.md  no-jinja-when.md  no-log-password.md  no-prompting.md  no-relative-paths.md  (+19 more)
docs/stylesheets/: extra.css
examples/: Taskfile.yml  ansible-navigator.yml  example.yml  execution-environment.yml  galaxy.yml  include.yml  inventory.yml  lineno.yml  nomatches.yml  plain_string.yml  play.yml  site.yml  unicode.yml
examples/.collection/: galaxy.yml
examples/.config/: ansible-lint.yml
examples/.no_collection_version/: galaxy.yml
examples/.test_collection/: galaxy.yml
examples/broken/: .ansible-lint  ansible-navigator.yml  encoding.j2  encoding.yml  load-failure-invalid.yml
examples/broken_supported_ansible_also/: .ansible-lint
examples/bug-3477/: .ansible-lint
examples/collection/: galaxy.yml
examples/ee_broken/: execution-environment.yml
examples/group_vars/: all.yml
examples/host_vars/: localhost.yml
examples/invalid_dependencies/: galaxy.yml
examples/inventory/: broken_dev_inventory.yml  inventory.yml  production.yml
examples/meta/: galaxy.yml  runtime.yml
examples/namespace_roles_repro/: .ansible-lint.yml  ansible.cfg
examples/no_changelog/: galaxy.yml
examples/no_collection_version/: galaxy.yml
examples/other/: guess-1.yml  some.yaml-too
examples/playbooks/: .ansible-lint-only-builtins-allow  .ansible-lint-only-builtins-allow-collections  206.yml  README.md  adj_action.yml  become.yml  (+229 more)
inventories/: bad_inventory  bar  baz
playbooks/: archlinux.yml  eco.yml  run-downstream-test.yml
rules/: CommandsInsteadOfArgumentsRule.py  CommandsInsteadOfModulesRule.py  DeprecatedTemplateBracketsRule.py  GitHasVersionRule.py  MercurialHasRevisionRule.py  MismatchedBracketRule.py  TaskHasTag.py  TrailingWhitespaceRule.py  UnsetVariableRule.py
test/: TestAbsPath.py  TestAlwaysRunRule.py  TestAnsibleLintRule.py  TestAnsibleSyntax.py  TestBaseFormatter.py  TestBecomeUserWithoutBecome.py  TestCliRolePaths.py  TestCodeclimateJSONFormatter.py  TestColorFormatter.py  TestCommandHasChangesCheck.py  TestCommandLineInvocationSameAsConfig.py  TestCommandsInsteadOfModulesRule.py  TestComparisonToEmptyString.py  TestComparisonToLiteralBool.py  TestDependenciesInMeta.py  TestDeprecatedModule.py  TestEnvVarsInCommand.py  TestExamples.py  TestFailOnDuplicateKeysRule.py  TestFilePathEvaluation.py  TestFormatter.py  TestGetConfig.py  TestGitRepoInMeta.py  TestImportIncludeRole.py  TestImportPlaybook.py  TestImportWithMalformed.py  TestIncludeMissFileWithRole.py  TestIncludeMissingFileRule.py  TestIndividualRules.py  TestIsPluginSafe.py  TestLineNumber.py  TestLineTooLong.py  TestLintRule.py  TestLocalContent.py  TestMatchError.py  TestMetaChangeFromDefault.py  TestMetaMainHasInfo.py  TestMetaTagValid.py  TestMetaVideoLinks.py  TestMismatchedBracketRule.py  (+171 more)
tools/: check-missing-ansible.py  generate-formatting-fixtures.py  generate_docs.py  install-reqs.sh  regenerate-fixtures.py  report-coverage  test-eco.sh  test-hook.sh  test-pkg.sh  test-setup.sh  update-galaxy-playforms.py  update-schemas.py  update-version.sh
zuul.d/: layout.yaml
(+1052 files in other folders)
