# cspell: ignore FURB xunit

[project]
name = "ansible-lint"
description = "Checks playbooks for practices and behavior that could potentially be improved"
readme = "README.md"
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ "name" = "Will Thames", "email" = "will@thames.id.au" }]
maintainers = [{ "name" = "Ansible by Red Hat", "email" = "info@ansible.com" }]
keywords = ["ansible", "lint"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "ansible-compat>=25.8.2",
  "ansible-core>=2.17.10",
  "black>=24.3.0",
  "cffi>=1.17.1",  # indirect dependency of ruamel-yaml
  "cryptography>=38",
  "distro>=1.9.0",
  "filelock>=3.8.2",
  "importlib-metadata>=8.7.0",
  "jsonschema>=4.10.0",
  "packaging>=22.0",
  "pathspec>=0.10.3",
  "pyyaml>=6.0.2 ; python_version < '3.14'",
  "pyyaml>=6.0.3 ; python_version >= '3.14'",  # py314 support
  "referencing>=0.36.2",
  "ruamel-yaml>=0.18.11",
  "ruamel-yaml-clib>=0.2.12 ; python_version < '3.14'",
  "subprocess-tee>=0.4.1",
  "wcmatch>=8.1.2 ; python_version < '3.12'",
  "wcmatch>=8.5.0 ; python_version >= '3.12'",
  "yamllint>=1.34.0",
]
dynamic = ["version"]

[project.urls]
changelog = "https://github.com/ansible/ansible-lint/releases"
documentation = "https://ansible.readthedocs.io/projects/lint/"
homepage = "https://github.com/ansible/ansible-lint"
repository = "https://github.com/ansible/ansible-lint"

[project.scripts]
ansible-lint = "ansiblelint.__main__:_run_cli_entrypoint"

[dependency-groups]
dev = [
  "ansible-creator>=25.8.0",  # indirect dependency of ipython
  "black>=25.1.0",  # indirect dependency of ipython
  "coverage-enable-subprocess>=1.0",  # indirect dependency
  "coverage[toml]>=7.2.0",
  "decorator>=5.1.1",
  "ipdb>=0.13.13",
  "ipython>=8.37.0",
  "jmespath>=1.0.1",
  "license-expression>=30.3.0",
  "matplotlib-inline>=0.1.6",
  "mypy>=1.17.1",
  "netaddr>=1.3.0",
  "pip>=25.2",
  "psutil>=7.0.0",
  "pylint>=3.3.8",
  "pyrsistent>=0.20.0",
  "pytest>=7.2.2",
  "pytest-instafail>=0.5.0",
  "pytest-mock>=3.15.0",
  "pytest-plus>=0.8.1",
  "pytest-sugar>=1.1.1",
  "pytest-xdist[psutil,setproctitle]>=2.1.0",
  "pyyaml>=6.0.2",
  "ruamel-yaml>=0.18.11",
  "ruamel-yaml-clib>=0.2.12 ; python_full_version < '3.14'",
  "tox>=4.24.2",
  "tox-extra>=2.1",
  "tox-uv>=1.25",
  "types-jsonschema>=4.25.1.20250822",
  "types-pyyaml>=6.0.12.20250822",
]
docs = ["markdown-exec[ansi]>=1.11.0", "mkdocs-ansible>=25.5.0", "six>=1.16.0"]
lint = [
  "pip>=25.2",
  "pre-commit>=4.1",
  "pre-commit-uv>=4.1.4",
  "pytest>=7.2.2",
  "setuptools>=51.1.1",
]
pkg = [
  "build>=0.9",
  "pip>=25.2",
  "pipx>=1.7.1",
  "setuptools-scm>=9.2.0",
  "twine>=4.0.1",
]
schemas = ["check-jsonschema>=0.26.3"]

[build-system]
requires = [
  "setuptools_scm[toml] >= 7.0.5",  # required for "no-local-version" scheme
  "setuptools >= 65.3.0",
]
build-backend = "setuptools.build_meta"

[tool.codespell]
# indention is a typo in ruamel.yaml's API
ignore-words-list = "indention"
skip = ".tox,.mypy_cache,build,.git,.eggs,uv.lock,pip-wheel-metadata"

# Keep this default because xml/report do not know to use load it from config file:
# data_file = ".coverage"
[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
exclude_also = ["pragma: no cover", "if TYPE_CHECKING:"]
# Increase it just so it would pass on any single-python run
fail_under = 93
# During development we might remove code (files) with coverage data, and we dont want to fail:
ignore_errors = true
omit = ["test/*"]
partial_branches = ["pragma: no cover", "if TYPE_CHECKING:"]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
# branch is more reliable than lines, protects against false positives
branch = true
concurrency = ["multiprocessing", "thread"]
parallel = true
relative_files = true
source = ["src"]

[tool.mypy]
check_untyped_defs = true
color_output = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
error_summary = true
# site-packages is here to help vscode mypy integration getting confused
exclude = "(.config|test/local-content|site-packages|~/.pyenv|examples|plugins/modules).*"
exclude_gitignore = true
# https://github.com/python/mypy/issues/12664
follow_untyped_imports = true
incremental = false
no_implicit_optional = true
python_version = "3.10"
show_error_code_links = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_errors = true
ignore_missing_imports = true
module = [
  "ansible.parsing.yaml.constructor",
  "license_expression",
  "ruamel.yaml",
]

[[tool.mypy.overrides]]
implicit_reexport = true
module = ["ansible.*", "yamllint.*"]

[tool.pylint.IMPORTS]

[tool.pylint.MASTER]
bad-names = [
  # spell-checker:ignore linenumber
  "linenumber",  # use lineno instead
  "line_number",  # use lineno instead
]
# pylint defaults + f,fh,v,id
good-names = ["i", "j", "k", "Run", "_", "f", "fh", "v", "id", "T"]
# Ignore as being generated:
ignore-paths = "^(examples|build|test/schemas/node_modules|.eggs|.cache|.direnv|.tox|src/ansiblelint/_version|.config/).*$"

[tool.pylint.REPORTING]
output-format = "colorized"

[tool.pylint.SUMMARY]
# We don't need the score spamming console, as we either pass or fail
score = "n"

[tool.pylint.messages_control]
disable = [
  "unknown-option-value",
  "cyclic-import",  # likely https://github.com/pylint-dev/pylint/issues/10140
  # https://gist.github.com/cidrblock/ec3412bacfeb34dbc2d334c1d53bef83
  "C0103",  # invalid-name / ruff N815
  "C0105",  # typevar-name-incorrect-variance / ruff PLC0105
  "C0112",  # empty-docstring / ruff D419
  "C0113",  # unneeded-not / ruff SIM208
  "C0114",  # missing-module-docstring / ruff D100
  "C0115",  # missing-class-docstring / ruff D101
  "C0116",  # missing-function-docstring / ruff D103
  "C0121",  # singleton-comparison / ruff PLC0121
  "C0123",  # unidiomatic-typecheck / ruff E721
  "C0131",  # typevar-double-variance / ruff PLC0131
  "C0132",  # typevar-name-mismatch / ruff PLC0132
  "C0198",  # bad-docstring-quotes / ruff Q002
  "C0199",  # docstring-first-line-empty / ruff D210
  "C0201",  # consider-iterating-dictionary / ruff SIM118
  "C0202",  # bad-classmethod-argument / ruff PLC0202
  "C0205",  # single-string-used-for-slots / ruff PLC0205
  "C0208",  # use-sequence-for-iteration / ruff PLC0208
  "C0301",  # line-too-long / ruff E501
  "C0303",  # trailing-whitespace / ruff W291
  "C0304",  # missing-final-newline / ruff W292
  "C0321",  # multiple-statements / ruff PLC0321
  "C0410",  # multiple-imports / ruff E401
  "C0411",  # wrong-import-order / ruff I001
  "C0412",  # ungrouped-imports / ruff I001
  "C0413",  # wrong-import-position / ruff E402
  "C0414",  # useless-import-alias / ruff PLC0414
  "C0415",  # import-outside-toplevel / ruff PLC0415
  "C0501",  # consider-using-any-or-all / ruff PLC0501
  "C1901",  # compare-to-empty-string / ruff PLC1901
  "C2201",  # misplaced-comparison-constant / ruff SIM300
  "C2401",  # non-ascii-name / ruff PLC2401
  "C2403",  # non-ascii-module-import / ruff PLC2403
  "C2701",  # import-private-name / ruff PLC2701
  "C2801",  # unnecessary-dunder-call / ruff PLC2801
  "C3001",  # unnecessary-lambda-assignment / ruff E731
  "C3002",  # unnecessary-direct-lambda-call / ruff PLC3002
  "E0001",  # syntax-error / ruff E999
  "E0100",  # init-is-generator / ruff PLE0100
  "E0101",  # return-in-init / ruff PLE0101
  "E0102",  # function-redefined / ruff F811
  "E0103",  # not-in-loop / ruff PLE0103
  "E0104",  # return-outside-function / ruff F706
  "E0105",  # yield-outside-function / ruff F704
  "E0107",  # nonexistent-operator / ruff B002
  "E0112",  # too-many-star-expressions / ruff F622
  "E0115",  # nonlocal-and-global / ruff PLE0115
  "E0116",  # continue-in-finally / ruff PLE0116
  "E0117",  # nonlocal-without-binding / ruff PLE0117
  "E0118",  # used-prior-global-declaration / ruff PLE0118
  "E0211",  # no-method-argument / ruff N805
  "E0213",  # no-self-argument / ruff N805
  "E0237",  # assigning-non-slot / ruff PLE0237
  "E0241",  # duplicate-bases / ruff PLE0241
  "E0302",  # unexpected-special-method-signature / ruff PLE0302
  "E0303",  # invalid-length-returned / ruff PLE0303
  "E0304",  # invalid-bool-returned / ruff PLE0304
  "E0305",  # invalid-index-returned / ruff PLE0305
  "E0308",  # invalid-bytes-returned / ruff PLE0308
  "E0309",  # invalid-hash-returned / ruff PLE0309
  "E0402",  # relative-beyond-top-level / ruff TID252
  "E0602",  # undefined-variable / ruff F821
  "E0603",  # undefined-all-variable / ruff F822
  "E0604",  # invalid-all-object / ruff PLE0604
  "E0605",  # invalid-all-format / ruff PLE0605
  "E0643",  # potential-index-error / ruff PLE0643
  "E0704",  # misplaced-bare-raise / ruff PLE0704
  "E0711",  # notimplemented-raised / ruff F901
  "E1132",  # repeated-keyword / ruff PLE1132
  "E1142",  # await-outside-async / ruff PLE1142
  "E1205",  # logging-too-many-args / ruff PLE1205
  "E1206",  # logging-too-few-args / ruff PLE1206
  "E1300",  # bad-format-character / ruff PLE1300
  "E1301",  # truncated-format-string / ruff F501
  "E1302",  # mixed-format-string / ruff F506
  "E1303",  # format-needs-mapping / ruff F502
  "E1304",  # missing-format-string-key / ruff F524
  "E1305",  # too-many-format-args / ruff F522
  "E1306",  # too-few-format-args / ruff F524
  "E1307",  # bad-string-format-type / ruff PLE1307
  "E1310",  # bad-str-strip-call / ruff PLE1310
  "E1519",  # singledispatch-method / ruff PLE1519
  "E1520",  # singledispatchmethod-function / ruff PLE5120
  "E1700",  # yield-inside-async-function / ruff PLE1700
  "E2502",  # bidirectional-unicode / ruff PLE2502
  "E2510",  # invalid-character-backspace / ruff PLE2510
  "E2512",  # invalid-character-sub / ruff PLE2512
  "E2513",  # invalid-character-esc / ruff PLE2513
  "E2514",  # invalid-character-nul / ruff PLE2514
  "E2515",  # invalid-character-zero-width-space / ruff PLE2515
  "E4703",  # modified-iterating-set / ruff PLE4703
  "R0123",  # literal-comparison / ruff F632
  "R0124",  # comparison-with-itself / ruff PLR0124
  "R0133",  # comparison-of-constants / ruff PLR0133
  "R0202",  # no-classmethod-decorator / ruff PLR0202
  "R0203",  # no-staticmethod-decorator / ruff PLR0203
  "R0205",  # useless-object-inheritance / ruff UP004
  "R0206",  # property-with-parameters / ruff PLR0206
  "R0904",  # too-many-public-methods / ruff PLR0904
  "R0911",  # too-many-return-statements / ruff PLR0911
  "R0912",  # too-many-branches / ruff PLR0912
  "R0913",  # too-many-arguments / ruff PLR0913
  "R0914",  # too-many-locals / ruff PLR0914
  "R0915",  # too-many-statements / ruff PLR0915
  "R0916",  # too-many-boolean-expressions / ruff PLR0916
  "R0917",  # too-many-positional-arguments / ruff PLR0917
  "R1260",  # too-complex / ruff C901
  "R1701",  # consider-merging-isinstance / ruff PLR1701
  "R1702",  # too-many-nested-blocks / ruff PLR1702
  "R1703",  # simplifiable-if-statement / ruff SIM108
  "R1704",  # redefined-argument-from-local / ruff PLR1704
  "R1705",  # no-else-return / ruff RET505
  "R1706",  # consider-using-ternary / ruff PLR1706
  "R1707",  # trailing-comma-tuple / ruff COM818
  "R1710",  # inconsistent-return-statements / ruff PLR1710
  "R1711",  # useless-return / ruff PLR1711
  "R1714",  # consider-using-in / ruff PLR1714
  "R1715",  # consider-using-get / ruff SIM401
  "R1717",  # consider-using-dict-comprehension / ruff C402
  "R1718",  # consider-using-set-comprehension / ruff C401
  "R1719",  # simplifiable-if-expression / ruff PLR1719
  "R1720",  # no-else-raise / ruff RET506
  "R1721",  # unnecessary-comprehension / ruff C416
  "R1722",  # consider-using-sys-exit / ruff PLR1722
  "R1723",  # no-else-break / ruff RET508
  "R1724",  # no-else-continue / ruff RET507
  "R1725",  # super-with-arguments / ruff UP008
  "R1728",  # consider-using-generator / ruff C417
  "R1729",  # use-a-generator / ruff C419
  "R1730",  # consider-using-min-builtin / ruff PLR1730
  "R1731",  # consider-using-max-builtin / ruff PLR1730
  "R1732",  # consider-using-with / ruff SIM115
  "R1733",  # unnecessary-dict-index-lookup / ruff PLR1733
  "R1734",  # use-list-literal / ruff C405
  "R1735",  # use-dict-literal / ruff C406
  "R1736",  # unnecessary-list-index-lookup / ruff PLR1736
  "R2004",  # magic-value-comparison / ruff PLR2004
  "R2044",  # empty-comment / ruff PLR2044
  "R5501",  # else-if-used / ruff PLR5501
  "R6002",  # consider-using-alias / ruff UP006
  "R6003",  # consider-alternative-union-syntax / ruff UP007
  "R6104",  # consider-using-augmented-assign / ruff PLR6104
  "R6201",  # use-set-for-membership / ruff PLR6201
  "R6301",  # no-self-use / ruff PLR6301
  "W0102",  # dangerous-default-value / ruff B006
  "W0104",  # pointless-statement / ruff B018
  "W0106",  # expression-not-assigned / ruff B018
  "W0107",  # unnecessary-pass / ruff PIE790
  "W0108",  # unnecessary-lambda / ruff PLW0108
  "W0109",  # duplicate-key / ruff F601
  "W0120",  # useless-else-on-loop / ruff PLW0120
  "W0122",  # exec-used / ruff S102
  "W0123",  # eval-used / ruff PGH001
  "W0127",  # self-assigning-variable / ruff PLW0127
  "W0129",  # assert-on-string-literal / ruff PLW0129
  "W0130",  # duplicate-value / ruff B033
  "W0131",  # named-expr-without-context / ruff PLW0131
  "W0133",  # pointless-exception-statement / ruff PLW0133
  "W0150",  # lost-exception / ruff B012
  "W0160",  # consider-ternary-expression / ruff SIM108
  "W0177",  # nan-comparison / ruff PLW0117
  "W0199",  # assert-on-tuple / ruff F631
  "W0211",  # bad-staticmethod-argument / ruff PLW0211
  "W0212",  # protected-access / ruff SLF001
  "W0245",  # super-without-brackets / ruff PLW0245
  "W0301",  # unnecessary-semicolon / ruff E703
  "W0401",  # wildcard-import / ruff F403
  "W0404",  # reimported / ruff F811
  "W0406",  # import-self / ruff PLW0406
  "W0410",  # misplaced-future / ruff F404
  "W0511",  # fixme / ruff PLW0511
  "W0602",  # global-variable-not-assigned / ruff PLW0602
  "W0603",  # global-statement / ruff PLW0603
  "W0604",  # global-at-module-level / ruff PLW0604
  "W0611",  # unused-import / ruff F401
  "W0612",  # unused-variable / ruff F841
  "W0613",  # unused-argument / ruff ARG001
  "W0622",  # redefined-builtin / ruff A001
  "W0640",  # cell-var-from-loop / ruff B023
  "W0702",  # bare-except / ruff E722
  "W0705",  # duplicate-except / ruff B014
  "W0706",  # try-except-raise / ruff TRY302
  "W0707",  # raise-missing-from / ruff TRY200
  "W0711",  # binary-op-exception / ruff PLW0711
  "W0718",  # broad-exception-caught / ruff PLW0718
  "W0719",  # broad-exception-raised / ruff TRY002
  "W1113",  # keyword-arg-before-vararg / ruff B026
  "W1201",  # logging-not-lazy / ruff G
  "W1202",  # logging-format-interpolation / ruff G
  "W1203",  # logging-fstring-interpolation / ruff G
  "W1300",  # bad-format-string-key / ruff PLW1300
  "W1301",  # unused-format-string-key / ruff F504
  "W1302",  # bad-format-string / ruff PLW1302
  "W1303",  # missing-format-argument-key / ruff F524
  "W1304",  # unused-format-string-argument / ruff F507
  "W1305",  # format-combined-specification / ruff F525
  "W1308",  # duplicate-string-formatting-argument / ruff PLW1308
  "W1309",  # f-string-without-interpolation / ruff F541
  "W1310",  # format-string-without-interpolation / ruff F541
  "W1401",  # anomalous-backslash-in-string / ruff W605
  "W1404",  # implicit-str-concat / ruff ISC001
  "W1405",  # inconsistent-quotes / ruff Q000
  "W1406",  # redundant-u-string-prefix / ruff UP025
  "W1501",  # bad-open-mode / ruff PLW1501
  "W1508",  # invalid-envvar-default / ruff PLW1508
  "W1509",  # subprocess-popen-preexec-fn / ruff PLW1509
  "W1510",  # subprocess-run-check / ruff PLW1510
  "W1514",  # unspecified-encoding / ruff PLW1514
  "W1515",  # forgotten-debug-statement / ruff T100
  "W1518",  # method-cache-max-size-none / ruff B019
  "W1641",  # eq-without-hash / ruff PLW1641
  "W2101",  # useless-with-lock / ruff PLW2101
  "W2402",  # non-ascii-file-name / ruff N999
  "W2901",  # redefined-loop-name / ruff PLW2901
  "W3201",  # bad-dunder-name / ruff PLW3201
  "W3301",  # nested-min-max / ruff PLW3301
  "duplicate-code",
  "fixme",
  "too-few-public-methods",
  "too-many-instance-attributes",
]
# increase from default is 50 which is too aggressive
max-statements = 60

[tool.pyright]
exclude = [
  ".ansible",
  ".cache",
  ".config",
  ".direnv",
  ".eggs",
  ".tox",
  ".venv",
  "ansible_collections",
  "build",
  "dist",
  "site",
  "venv",
  "examples/playbooks/collections",
]
include = ["src"]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
# pythonVersion = "3.10"
# reportMissingImports = false
# https://github.com/microsoft/pyright/issues/9494
reportPossiblyUnboundVariable = false
# Introduced in v1.1.398 but already covered by ruff
reportPrivateImportUsage = false

# spell-checker:ignore filterwarnings norecursedirs optionflags
[tool.pytest.ini_options]
# do not add options here as this will likely break either console runs or IDE
# integration like vscode or pycharm
addopts = "-p no:pytest_cov --durations=10 --failed-first"
doctest_optionflags = ["ALLOW_UNICODE", "ELLIPSIS"]
filterwarnings = [
  "error",
  # https://sourceforge.net/p/ruamel-yaml/tickets/452/
  "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
  # https://github.com/spdx/tools-python/issues/507
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
  # We raise one non critical warning from our own conftest.py:
  "always::pytest.PytestWarning",
  # py312 ansible-core
  # https://github.com/ansible/ansible/issues/81906
  "ignore:'importlib.abc.TraversableResources' is deprecated and slated for removal in Python 3.14:DeprecationWarning",
  # https://github.com/ansible/ansible/pull/80968
  "ignore:Attribute s is deprecated and will be removed in Python 3.14; use value instead:DeprecationWarning",
]
junit_family = "xunit2"
markers = ["libyaml: tests that will pass only with pyyaml libyaml is present."]
minversion = "4.6.6"
# https://code.visualstudio.com/docs/python/testing
# coverage is re-enabled in `tox.ini`. That approach is safer than
# `--no-cov` which prevents activation from tox.ini and which also fails
# when plugin is effectively missing.
norecursedirs = [
  "*.egg",
  ".cache",
  ".config",
  ".eggs",
  ".git",
  ".github",
  ".mypy_cache",
  ".projects",
  ".eggs",
  ".tox",
  "__pycache__",
  "ansible_collections",
  "build",
  "collections",
  "dist",
  "docs",
  "examples",
  "plugins",
  "site",
  "src/ansible_lint.egg-info",
  "test/schemas",
]
python_files = [
  "test_*.py",
  # Ref: https://docs.pytest.org/en/latest/reference.html#confval-python_files
  # Needed to discover legacy nose test modules:
  "Test*.py",
  # Needed to discover embedded Rule tests
  "rules/*.py",
]
# Using --pyargs instead of testpath as we embed some tests
# See: https://github.com/pytest-dev/pytest/issues/6451#issuecomment-687043537
# testpaths =
xfail_strict = true

[tool.ruff]
cache-dir = "./.cache/.ruff"
exclude = [".config"]
fix = true
# Same as Black.
line-length = 88
preview = true
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "COM812",  # conflicts with ISC001 on format
  "CPY001",  # missing-copyright-notice
  "D203",  # incompatible with D211
  "D213",  # incompatible with D212
  "E501",  # we use black
  "ERA001",  # auto-removal of commented out code affects development and vscode integration
  "INP001",  # "is part of an implicit namespace package", all false positives
  "ISC001",  # conflicts with COM812 on format
  "PLW2901",  # PLW2901: Redefined loop variable
  "RET504",  # Unnecessary variable assignment before `return` statement
  # temporary disabled until we fix them:
  "ANN",
  "ARG002",  # Unused method argument (currently in too many places)
  "D102",  # Missing docstring in public method (currently in too many places)
  "FBT001",
  "FBT003",
  "FURB189",  # Subclassing `dict` can be error prone, use `collections.UserDict` instead
  "PD011",  # We are not using pandas, any .values attributes are unrelated
  "PERF203",
  "PLR",
  "PLW0603",  # global lock file in cache dir
  "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF045",  # Assignment without annotation found in dataclass body
  # part of preview rules:
  "B909",  # raise-missing-from
  "DOC201",  # docstring-missing-returns
  "DOC402",  # docstring-missing-summary
  "DOC501",  # docstring-missing-exception
  "FURB101",
  "FURB103",
  "FURB110",
  "FURB113",
  "FURB118",
  "PLC0207",  # maxsplit with [-1] preview rule
  "PLC0415",
  "PLC2701",
  "PLW1641",
  "S404",
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.mccabe]
# Implicit 10 is too low for our codebase, even black uses 18 as default.
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"src/ansiblelint/rules/*.py" = ["S"]
"src/ansiblelint/testing/*.py" = ["S"]
# Temporary disabled until we fix them:
"src/ansiblelint/{utils,file_utils,runner,loaders,constants,config,cli,_mockings}.py" = [
  "PTH",
]
"test/**/*.py" = ["DOC201", "DOC501", "PLC2701", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools_scm]
# To prevent accidental pick of mobile version tags such 'v6'
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--long",
  "--tags",
  "--match",
  "v*.*",
]
local_scheme = "no-local-version"
tag_regex = "^(?P<prefix>v)?(?P<version>\\d+[^\\+]*)(?P<suffix>.*)?$"
version_file = "src/ansiblelint/_version.py"

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true

[tool.tox]
env_list = [
  "py",
  "devel",
  "lint",
  "pkg",
  "hook",
  "docs",
  "schemas",
  "lower",
  "eco",
]
requires = ["setuptools>=65.3", "tox>=4.30.2", "tox-extra>=2.1", "tox-uv>=1.28"]
skip_missing_interpreters = true

[tool.tox.env.clean]
commands = [
  "find . -type d \\( -name __pycache__ -o -name .mypy_cache \\) -delete",
  "find . -type f \\( -name '*.py[co]' -o -name \".coverage*\" -o -name coverage.xml \\) -delete",
]
commands_post = []
commands_pre = []
description = "Remove temporary files"
skip_install = true

[tool.tox.env.deps]
commands = [
  [
    "pre-commit",
    "run",
    "--all-files",
    "--show-diff-on-failure",
    "--hook-stage",
    "manual",
    "deps",
  ],
  ["pre-commit", "autoupdate"],
  ["sh", "-c", "cd test/schemas && npm run deps"],
  ["tox", "-e", "lint"],
]
commands_pre = []
description = "Bump all test dependencies"
env_dir = "{work_dir}/lint"
skip_install = true

[tool.tox.env.devel]
dependency_groups = ["dev"]
deps = [
  "ansible-compat @ git+https://github.com/ansible/ansible-compat.git",
  "ansible-core @ git+https://github.com/ansible/ansible.git",
]
description = "Run the tests with newest dependencies (no lock and allowing prereleases)"
runner = "uv-venv-runner"
uv_sync_flags = ["--upgrade", "--prerelease=allow"]
uv_sync_locked = false

[tool.tox.env.docs]
commands = [
  [
    "mkdocs",
    { default = ["build", "--strict", "--site-dir=_readthedocs/html/"], extend = true, replace = "posargs" },
  ],
]
commands_pre = [["ansible-lint", "--version"]]
dependency_groups = ["docs"]
description = "Builds docs"
skip_install = false
set_env.DYLD_FALLBACK_LIBRARY_PATH = "/opt/homebrew/lib:{env:LD_LIBRARY_PATH}"
set_env.NO_COLOR = "1"
set_env.TERM = "dump"

[tool.tox.env.eco]
commands = [
  ["sh", "-c", "tools/test-eco.sh"],
]
commands_post = []
commands_pre = []
description = "Perform ecosystem impact (downstream testing) https://github.com/ansible/ansible-lint/discussions/1403"

[tool.tox.env.hook]
commands = [["{tox_root}/tools/test-hook.sh"]]
dependency_groups = ["lint"]
description = "Validate pre-commit hook definition"

[tool.tox.env.lint]
commands = [["pre-commit", "run", "--all-files", "--show-diff-on-failure"]]
commands_pre = []
dependency_groups = ["lint"]
description = "Run all linters"
skip_install = true

[tool.tox.env.lower]
dependency_groups = ["dev"]
description = "Install using lowest constraints possible."
runner = "uv-venv-runner"
uv_resolution = "lowest"

[tool.tox.env.pkg]
commands = [
  ["rm", "-rf", "{tox_root}/dist/"],
  [
    "python",
    "-m",
    "build",
    "--outdir",
    "{tox_root}/dist/",
    "{tox_root}",
  ],
  ["bash", "-c", "python -m twine check --strict {tox_root}/dist/*"],
  ["bash", "./tools/test-pkg.sh"],
]
commands_pre = []
dependency_groups = ["pkg"]
description = """
Build package, verify metadata, install package and assert behavior when ansible is missing.
"""
skip_install = true

[tool.tox.env.py310-lower]
dependency_groups = ["dev"]
description = "Install using lowest constraints possible."
runner = "uv-venv-runner"
uv_resolution = "lowest"

[tool.tox.env.py312-devel]
dependency_groups = ["dev"]
deps = [
  "ansible-compat @ git+https://github.com/ansible/ansible-compat.git  # GPLv3+",
  "ansible-core @ git+https://github.com/ansible/ansible.git  # GPLv3+",
]
description = "Run the tests with newest dependencies (no lock and allowing prereleases)"
runner = "uv-venv-runner"
uv_sync_flags = ["--upgrade", "--prerelease=allow"]
uv_sync_locked = false

[tool.tox.env.py312-lower]
dependency_groups = ["dev"]
description = "Install using lowest constraints possible."
runner = "uv-venv-runner"
uv_resolution = "lowest"

[tool.tox.env.py313-devel]
dependency_groups = ["dev"]
deps = [
  "ansible-compat @ git+https://github.com/ansible/ansible-compat.git  # GPLv3+",
  "ansible-core @ git+https://github.com/ansible/ansible.git  # GPLv3+",
]
description = "Run the tests with newest dependencies (no lock and allowing prereleases)"
runner = "uv-venv-runner"
uv_sync_flags = ["--upgrade", "--prerelease=allow"]
uv_sync_locked = false

[tool.tox.env.py314-devel]
dependency_groups = ["dev"]
deps = [
  "ansible-compat @ git+https://github.com/ansible/ansible-compat.git",
  "ansible-core @ git+https://github.com/ansible/ansible.git",
]
description = "Run the tests with newest dependencies (no lock and allowing prereleases)"
runner = "uv-venv-runner"
uv_sync_flags = ["--upgrade", "--prerelease=allow"]
uv_sync_locked = false

[tool.tox.env.redirects]
commands = [
  [
    "rtd",
    "projects",
    "ansible-lint",
    "redirects",
    "sync",
    "-f",
    "docs/redirects.yml",
    "--wet-run",
  ],
]
commands_post = []
commands_pre = []
deps = ["readthedocs-cli"]
description = "Update documentation redirections for readthedocs"

[tool.tox.env.schemas]
change_dir = "test/schemas"
commands = [["npm", "test"]]
commands_pre = [["check-jsonschema", "--version"], ["npm", "install"]]
dependency_groups = ["schemas"]
description = "Rebuild and test JSON Schemas"
skip_install = true

[tool.tox.env_run_base]
allowlist_externals = [
  "bash",
  "find",
  "git",
  "npm",
  "pwd",
  "rm",
  "sh",
  "tox",
  "{tox_root}/tools/report-coverage",
  "{tox_root}/tools/test-hook.sh",
  "{work_dir}/.pipx/bin/ansible-lint",
]
commands = [
  [
    "python",
    "-m",
    "coverage",
    "run",
    "-m",
    "pytest",
    { default = [
      "-ra",
      "--showlocals",
      "--doctest-modules",
      "--durations=10",
      "--junitxml=./junit.xml",
    ], extend = true, replace = "posargs" },
  ],
  ["{tox_root}/tools/report-coverage"],
]
commands_pre = [
  ["sh", "-c", "rm -f {env_dir}/.coverage.* 2>/dev/null || true"],
  ["bash", "./tools/install-reqs.sh"],
  ["ansible", "--version"],
]
description = """Run the tests: py{py_dot_ver}"""
package = "editable"
pass_env = [
  "CI",
  "CURL_CA_BUNDLE",
  "FORCE_COLOR",
  "HOME",
  "LANG",
  "LC_*",
  "NO_COLOR",
  "PRE_COMMIT_HOME",
  "PYTEST_*",
  "PYTHON*",
  "PYTHONBREAKPOINT",
  "PYTHONIOENCODING",
  "PYTHONPYCACHEPREFIX",
  "PY_COLORS",
  "REQUESTS_CA_BUNDLE",
  "RTD_TOKEN",
  "SETUPTOOLS_SCM_DEBUG",
  "SSH_AUTH_SOCK",
  "SSL_CERT_FILE",
  "UV_*",
]
runner = "uv-venv-lock-runner"

[tool.tox.env_run_base.set_env]
COVERAGE_FILE = "{env:COVERAGE_FILE:{env_dir}/.coverage.{env_name}}"
COVERAGE_PROCESS_START = "{tox_root}/pyproject.toml"
FORCE_COLOR = "1"
PIP_DISABLE_PIP_VERSION_CHECK = "1"
PRE_COMMIT_COLOR = "always"

[tool.uv]
package = true

[tool.vulture]
exclude = [
  ".eggs",
  ".tox",
  "build",
  "collections",
  "examples",
  "plugins",
  "test/local-content",
  "venv",
  "src/ansiblelint/_version.py",
]
ignore_names = [
  "_ANSIBLE_ARGS",
  "__line__",
  "fixture_*",
  "pytest_addoption",
  "pytest_collection_modifyitems",
  "pytest_configure",
  "side_effect",
  "test_*",
]
paths = ["src", "test", ".config/vulture_whitelist.py"]
